cloudformation/compute-resources.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Prefix:
    Type: String
    Description: Prefix for naming resources
  Env:
    Type: String
    Description: Environment (e.g.2, dev, prod)
  KeyPair:
    Type: String
    Description: Key pair for EC2 instance login
  InstanceProfile:
    Type: String
    Description: IAM instance profile for EC2 instance SSM connection
  Role:
    Type: String
    Description: IAM role resources

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.18.102.0/23
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-vpc'

  # Public Subnets
  PublicSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.102.0/26
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-public-1a'

  PublicSubnet1B:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.102.64/26
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-public-1b'

  # App Subnets
  AppSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.103.0/26
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-app-1a'

  AppSubnet1B:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.103.64/26
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-app-1b'

  # DB Subnets
  DBSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.103.192/28
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-db-1a'

  DBSubnet1B:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.18.103.208/28
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-db-1b'

  # Internet Gateway for Public Subnets
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-igw'

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-public-rt'

  # Public Route to the Internet
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Route Table Associations for Public Subnets
  PublicRouteTableAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  PublicRouteTableAssociation1B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1B
      RouteTableId: !Ref PublicRouteTable

  # Route Table Associations for App Subnets
  AppRouteTable1A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-app-1a-rt'

  AppRouteTable1B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-app-1b-rt'

  # DB Subnet Route Tables
  DBRouteTable1A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-db-1a-rt'

  DBRouteTable1B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-db-1b-rt'

  # Route Table Associations for App Subnets
  AppRouteTableAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnet1A
      RouteTableId: !Ref AppRouteTable1A

  AppRouteTableAssociation1B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnet1B
      RouteTableId: !Ref AppRouteTable1B

  # Route Table Associations for DB Subnets
  DBRouteTableAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet1A
      RouteTableId: !Ref DBRouteTable1A

  DBRouteTableAssociation1B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet1B
      RouteTableId: !Ref DBRouteTable1B

  # RDS Subnet Group
  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: !Sub '${Prefix}-${Env}-db-subnet-group'
      DBSubnetGroupDescription: !Sub '${Prefix}-${Env}-db-subnet-group'
      SubnetIds:
        - !Ref DBSubnet1A
        - !Ref DBSubnet1B
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-db-subnet-group'

  # ElasiCache Subnet Group
  ElastiCacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      CacheSubnetGroupName: !Sub '${Prefix}-${Env}-cache-subnet-group'
      Description: !Sub '${Prefix}-${Env}-cache-subnet-group'
      SubnetIds:
        - !Ref DBSubnet1A
        - !Ref DBSubnet1B
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-cache-subnet-group'

  # PostgreSQL Parameter Group
  PostgreSQLParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Family: postgres16
      DBParameterGroupName: !Sub '${Prefix}-${Env}-postgres16-parameter-group'
      Description: !Sub '${Prefix}-${Env}-postgres16-parameter-group'

  # Redis Parameter Group
  RedisParameterGroup:
    Type: AWS::ElastiCache::ParameterGroup
    Properties:
      CacheParameterGroupFamily: redis7
      CacheParameterGroupName: !Sub '${Prefix}-${Env}-redis7-parameter-group'
      Description: !Sub '${Prefix}-${Env}-redis7-parameter-group'

  # Security Group for ALB
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${Prefix}-${Env}-alb-sg'
      GroupDescription: !Sub '${Prefix}-${Env}-alb-sg'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-alb-sg'

  # Security Group for Container
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${Prefix}-${Env}-container-sg'
      GroupDescription: !Sub '${Prefix}-${Env}-container-sg'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-container-sg'

  # Security Group for Bastion Host
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${Prefix}-${Env}-bastion-sg'
      GroupDescription: !Sub '${Prefix}-${Env}-bastion-sg'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-bastion-sg'

  # Security Group for RDS PostgreSQL
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${Prefix}-${Env}-rds-sg'
      GroupDescription: !Sub '${Prefix}-${Env}-rds-sg'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          SourceSecurityGroupId: !Ref ContainerSecurityGroup
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-rds-sg'

  # Security Group for ElastiCache Redis
  ElastiCacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${Prefix}-${Env}-cache-sg'
      GroupDescription: !Sub '${Prefix}-${Env}-cache-sg'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '6379'
          ToPort: '6379'
          SourceSecurityGroupId: !Ref ContainerSecurityGroup
        - IpProtocol: tcp
          FromPort: '6379'
          ToPort: '6379'
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-cache-sg'

  # Launch Template for Bastion Host
  BastionHostLaunchTemplate:
    DependsOn: ECRepository
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateName: !Sub '${Prefix}-${Env}-bastion-template'
      LaunchTemplateData:
        ImageId: !FindInMap [AMIMap, !Ref "AWS::Region", AMAZONLINUX2023]
        InstanceType: t3.micro
        IamInstanceProfile:
          Arn: !Sub 'arn:aws:iam::${AWS::AccountId}:instance-profile/${InstanceProfile}'
        MetadataOptions:
          HttpTokens: required
          HttpEndpoint: enabled
          InstanceMetadataTags: enabled
        SecurityGroupIds:
          - !Ref BastionSecurityGroup
        KeyName: !Sub '${KeyPair}'
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeType: gp3
              VolumeSize: 50
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            set -e
            yum update -y && yum install -y docker git postgresql16 redis6 jq
            systemctl start docker || true
            systemctl enable docker
            git clone -b khang/features https://github.com/Bruhbuhr/CloudDeveloping.git /tmp/CloudDeveloping && cd /tmp/CloudDeveloping/src
            aws ecr get-login-password --region ${AWS::Region} | docker login --username AWS --password-stdin ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com
            docker build -t ${Prefix}-${Env}-backend-service:latest .
            docker tag ${Prefix}-${Env}-backend-service:latest ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${Prefix}-${Env}-backend-service:latest
            docker push ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${Prefix}-${Env}-backend-service:latest
            cd ../schema
            SECRET=$(aws secretsmanager get-secret-value --secret-id ${Prefix}-${Env}-rds-credentials --query SecretString --output text)
            DB_USERNAME=$(echo $SECRET | jq -r .username)
            DB_PASSWORD=$(echo $SECRET | jq -r .password)
            PGPASSWORD=$DB_PASSWORD psql -h ${RDSPostgreSQLInstance.Endpoint.Address} -U $DB_USERNAME -d tickerydb -f database.sql
            export S3_BUCKET_URL="https://${Prefix}-${Env}-event-images.s3.${AWS::Region}.amazonaws.com"
            sh replace.sh
            PGPASSWORD=$DB_PASSWORD psql -h ${RDSPostgreSQLInstance.Endpoint.Address} -U $DB_USERNAME -d tickerydb -f events_modified.sql

  # ECR Container Image
  ECRepository:
    Type: AWS::ECR::Repository
    Properties: 
      RepositoryName: !Sub '${Prefix}-${Env}-backend-service'
      ImageScanningConfiguration: 
        ScanOnPush: true

  # # EC2 Instance for Bastion Host
  BastionHostInstance:
    Type: 'AWS::EC2::Instance'
    Properties: 
      LaunchTemplate:
        LaunchTemplateId: !Ref BastionHostLaunchTemplate
        Version: !GetAtt BastionHostLaunchTemplate.LatestVersionNumber
      SubnetId: !Ref PublicSubnet1A
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-bastion'

  # RDS PostgreSQL Instance
  RDSPostgreSQLInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: !Sub '${Prefix}-${Env}-postgres-db'
      DBInstanceClass: db.t3.small
      Engine: postgres
      EngineVersion: 16
      DBName: 'tickerydb'
      MasterUsername: !Join ['', ['{{resolve:secretsmanager:', !Ref RDSSecret, ':SecretString:username}}' ]]
      MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref RDSSecret, ':SecretString:password}}' ]]
      DBSubnetGroupName: !Ref RDSSubnetGroup
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup
      AllocatedStorage: 50
      StorageType: gp3
      MultiAZ: false
      PubliclyAccessible: false
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-postgres-db'

  # Secrets Manager - Store RDS Credentials
  RDSSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub '${Prefix}-${Env}-rds-credentials'
      Description: !Sub 'RDS PostgreSQL credentials for ${Prefix}-${Env}'
      GenerateSecretString:
        SecretStringTemplate: !Sub '{"username": "postgres","dbname":"tickerydb"}}'
        GenerateStringKey: 'password'
        PasswordLength: 16
        ExcludePunctuation: true
      Tags:
        - Key: Name
          Value: !Sub '${Prefix}-${Env}-rds-credentials'

  # # ElastiCache Redis Cluster
  # RedisCluster:
  #   Type: AWS::ElastiCache::CacheCluster
  #   Properties:
  #     ClusterName: !Sub '${Prefix}-${Env}-redis-cluster'
  #     Engine: redis
  #     CacheNodeType: cache.t3.micro
  #     NumCacheNodes: 1
  #     AZMode: single-az
  #     CacheSubnetGroupName: !Ref ElastiCacheSubnetGroup
  #     CacheParameterGroupName: !Ref RedisParameterGroup
  #     VpcSecurityGroupIds:
  #       - !Ref ElastiCacheSecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: !Sub '${Prefix}-${Env}-redis-cluster'

  # Target Group Blue
  ELBTargetGroupBlue:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${Prefix}-${Env}-alb-tg-blue'
      HealthCheckIntervalSeconds: 6
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC
      TargetType: ip

  # Target Group Green
  ELBTargetGroupGreen:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${Prefix}-${Env}-alb-tg-green'
      HealthCheckIntervalSeconds: 6
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC
      TargetType: ip

  # Application Load Balancer
  ElasticLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub '${Prefix}-${Env}-alb'
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1A
        - !Ref PublicSubnet1B
      SecurityGroups: 
        - !Ref ALBSecurityGroup

  # HTTP Listener
  HTTPElbListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ELBTargetGroupBlue
      LoadBalancerArn: !Ref ElasticLoadBalancer
      Port: '80'
      Protocol: HTTP

# Mappings for AMI ID based on Region
Mappings:
  AMIMap:
    ap-southeast-1:
      AMAZONLINUX2023: ami-0995922d49dc9a17d
    us-east-1:
      AMAZONLINUX2023: ami-01816d07b1128cd2d
